# Wren

./: .clang-format  .clang-tidy  .cmake-format.py  .codespellrc  .gitignore  .pre-commit-config.yaml  .typos.toml  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  conanfile.py  fix_encoding.ps1  project.json  vcpkg.json
.github/: .copilot-instructions.md  PULL_REQUEST_TEMPLATE
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/instructions/: cmake.instructions.md  cpp.instructions.md
.github/workflows/: main.yml
docs/: Doxyfile.in
docs/pages/processes/: cpp_style.md  versioning.md
projects/: CMakeLists.txt
projects/apps/: CMakeLists.txt
projects/apps/renderer/: CMakeLists.txt
projects/apps/renderer/src/: main.cpp
projects/core/: CMakeLists.txt
projects/core/bench/: CMakeLists.txt
projects/core/export/: render_core_export.hpp
projects/core/include/core/: version.hpp
projects/core/include/core/display/: test.hpp
projects/core/include/core/gfx/vulkan/: test.hpp
projects/core/include/core/utils/: scope_exit.hpp  unique_resource.hpp
projects/core/include/core/vulkan/: context.hpp  vulkan.hpp  vulkan_functions.inl
projects/core/src/: CMakeLists.txt  version.cpp
projects/core/src/display/: CMakeLists.txt  test.cpp  window.cpp
projects/core/src/gfx/: CMakeLists.txt
projects/core/src/gfx/vulkan/: CMakeLists.txt  test.cpp  test.cppm
projects/core/src/utils/: CMakeLists.txt
projects/core/src/vulkan/: context.cpp  vulkan.cpp
projects/core/test/: CMakeLists.txt
projects/libs/: CMakeLists.txt
projects/libs/foundation/: CMakeLists.txt  README.md
projects/libs/foundation/include/wren/foundation/system/: platform.hpp
projects/libs/foundation/include/wren/foundation/utility/: enum_utils.hpp  scope_exit.hpp  unique_resource.hpp
projects/libs/foundation/src/: CMakeLists.txt
projects/libs/foundation/src/containers/: CMakeLists.txt
projects/libs/foundation/src/diag/: CMakeLists.txt
projects/libs/foundation/src/memory/: CMakeLists.txt
projects/libs/foundation/src/utility/: CMakeLists.txt
projects/libs/platform/: CMakeLists.txt  README.md
projects/libs/platform/include/wren/platform/: window.hpp
projects/libs/platform/src/: window.cpp
projects/libs/rhi/: ARCHITECTURE.md  CMakeLists.txt  README.md
projects/libs/rhi/api/: CMakeLists.txt
projects/libs/rhi/api/include/wren/rhi/: backend.h  backend.hpp
projects/libs/rhi/api/include/wren/rhi/api/: api.hpp  enums.hpp  features.hpp  status.hpp
projects/libs/rhi/backends/: CMakeLists.txt
projects/libs/rhi/backends/opengl/: CMakeLists.txt
projects/libs/rhi/backends/opengl/include/wren/rhi/opengl/: api.h  api.hpp
projects/libs/rhi/backends/opengl/src/: api.cpp
projects/libs/rhi/backends/vulkan/: CMakeLists.txt
projects/libs/rhi/backends/vulkan/include/: api.hpp
projects/libs/rhi/backends/vulkan/include/wren/rhi/vulkan/: adapter.hpp  api.h  api.hpp  device.hpp  instance.hpp
projects/libs/rhi/backends/vulkan/src/: api.cpp  device.cpp  instance.cpp  vk_capabilities.cpp  vk_capabilities.hpp
projects/libs/rhi/loader/: CMakeLists.txt
projects/libs/rhi/loader/include/wren/rhi/: loader.hpp
projects/libs/rhi/loader/src/: loader.cpp
projects/renderer/: CMakeLists.txt
projects/renderer/src/: main.cpp
projects/tools/: CMakeLists.txt
projects/tools/resource_processor/: CMakeLists.txt
projects/window/: CMakeLists.txt
projects/window/include/renderer/window/: window.hpp
tools/cmake/: cmake-utils.cmake  format-targets.cmake  spell-targets.cmake  target-utils.cmake  utils.cmake
tools/cmake/modules/: cmake_utils.cmake  docs_targets.cmake  extract_version.cmake  format.cmake  install_rules.cmake  packaging_rules.cmake  target_utils.cmake  utils.cmake  versioning.cmake  wrenConfig.cmake.in
tools/cmake/presets/: analysis_presets.json  base_presets.json  build_presets.json  ci_presets.json  compiler_presets.json  dev_presets.json  package_manager_presets.json  package_presets.json  test_presets.json  tooling_presets.json  workflow_presets.json
tools/cmake/triplets/: x64-windows-llvm.cmake
tools/cmake/triplets/x64-win-llvm/: extra_setup.cmake  port_specialization.cmake  x64-win-llvm.toolchain.cmake
tools/cmake/triplets/x64-win-llvm/Platform/: Clang-CL-C.cmake  Clang-CL-CXX.cmake  Clang-CL-override.cmake  Windows-MSVC.cmake
